# design_pattern

./: CMakeLists.txt  main.cpp
inc/: factory_method.h  singleton.h  test.h
singleton/: CMakeLists.txt  singleton.cpp  singleton.h  test.cpp
src/: factory_method.cpp  singleton.cpp  test.cpp
